--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-Flask>=2.0
-yfinance
-pandas
-numpy
-ta
-catboost
-gunicorn
-flask_cors
+Flask>=2.2.5,<3.0
+Flask-Cors>=3.1.1,<4.0
+yfinance>=0.2.9,<0.2.40
+pandas>=2.0.3,<2.1.0
+numpy>=1.24.3,<1.25.0
+ta>=0.11.0,<0.12.0
+catboost>=1.1.1,<1.2.0
+gunicorn>=20.1.0,<21.0.0
